# cot-oracle

./: .gitattributes  .gitignore  .gitmodules  =2.7  CLAUDE.md  README.md  README_vastai.md  checkpoints  datasets  launch.txt  launch_flamingo.sh  model_card.md  plan.md  pyproject.toml  requirements.txt
AObench/: README.md  __init__.py  base_experiment.py  report.py
archive/: launch_v3.sh  train_mixed.py  train_v2.py  train_v4.py  train_v6_curriculum.yaml
baselines/: activation_utils.py  attention_probe.py  bb_monitor.py  linear_probe.py  linear_probes.py  llm_monitor.py  no_act_oracle.py  original_ao.py  our_ao.py  patchscopes.py  push_wandb_baselines.py  qwen_attention_probe.py  run.py  run_gemini_monitor.py  run_llm_monitor.py  sae_llm.py  sae_probe.py  scoring.py  shared.py
calibration_dpo/: activations.py  config.yaml  data_sampler.py  dpo_loss.py  fixed_eval.py  judge.py  launch_vast.sh  prompts.py  rollouts.py  train_dpo.py
calibration_grpo/: config.yaml  grpo_loss.py  judge.py  online_sampler.py  reward.py  train_grpo.py
configs/: ablation_1layer.yaml  ablation_5layers.yaml  ablation_6layers.yaml  ablation_adaptive_norm.yaml  ablation_base_0.6b.yaml  ablation_flamingo_0.6b.yaml  ablation_graduated.yaml  ablation_hybrid.yaml  ablation_last_pos_only.yaml  ablation_layerpool_stride40.yaml  ablation_no_cot_futurelens.yaml  ablation_no_cot_lens.yaml  ablation_noise.yaml  ablation_noise_activations.yaml  ablation_per_layer_tokens.yaml  ablation_pooling_chunks5.yaml  ablation_pooling_single.yaml  ablation_pooling_stride100_3layers.yaml  ablation_probe_only.yaml  (+34 more)
(+4430 files in other folders)
